[package]
name = "middleware"
version = "0.1.0"
authors = ["Oluwapelumi Ajayi <opelajayi@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i8583 = "0.1.0"
tokio = { version = "0.2", features = ["full"] }
tokio-native-tls = "0.1.0"
futures = "0.3"
