[package]
name = "middleware"
version = "0.1.0"
authors = ["Oluwapelumi Ajayi <opelajayi@yahoo.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
i8583 = "0.1.0"
tokio = { version = "0.2", features = ["full"] }
native-tls = "0.2"
tokio-native-tls = "0.1.0"
futures = "0.3"
log = "0.4"
env_logger = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
